--- a/spring-boot-samples/pom.xml
+++ b/spring-boot-samples/pom.xml
@@ -64,6 +64,7 @@
 		<module>spring-boot-sample-logback</module>
 		<module>spring-boot-sample-parent-context</module>
 		<module>spring-boot-sample-profile</module>
+		<module>spring-boot-sample-oauth2-client</module>
 		<module>spring-boot-sample-property-validation</module>
 		<module>spring-boot-sample-quartz</module>
 		<module>spring-boot-sample-secure</module>
